# evaluator

./: .gitignore  demo.py  pyproject.toml  utils.py
demo/: AIME25_3.jsonl  test.py
dream_evaluator/: __init__.py  config.py  evaluator.py  module.py
eval_module/analyzer/: QA.py  example.py
eval_module/dataset/: AIME25.py  example.py
eval_module/method/: OpenAIAPI.py  example.py
eval_module/summarizer/: QA.py  example.py
test/: config.yaml
test/output/test/version_10/: inference_records.jsonl
test/output/test/version_11/: inference_records.jsonl
test/output/test/version_12/: analysis_records.jsonl  inference_records.jsonl  summary.json
