[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dream_evaluator"
version = "0.1"
description = "A concise and efficient evaluation framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "MZ chen", email = "hyhpchenmengzhu@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/VMIJUNV/evaluator"
